--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body{height: 1100px;
   background: url("http://i985.photobucket.com/albums/ae339/filosss2010/Filosssografia%202012/ESCF8322.jpg");
-  no-repeat center center fixed;
+  background-repeat:  no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   background-size: cover;
 }
 
@@ -43,8 +45,15 @@ p {margin:20px;}
    left: 100px;
    top: 150px;*/
 iframe {margin: 50px 50px 0px 50px;
+        height: 200px;
+        width: 400px;
         background-color: #000;
         /*display:none;*/
+}
+
+#invisible-section {position: fixed;
+                    bottom: 0;
+                    width: screen;
 }
 
 .music {width: 40%;
@@ -81,7 +90,9 @@ iframe {margin: 50px 50px 0px 50px;
 @media screen and (max-width: 568px) {
   #Main {height: 1200px;
     background: url("http://i985.photobucket.com/albums/ae339/filosss2010/Filosssografia%202012/ESCF8322.jpg");
-    no-repeat center center fixed;
+    background-repeat:  no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
     background-size: cover;
   }
 
@@ -110,6 +121,7 @@ iframe {margin: 50px 50px 0px 50px;
     border-radius: 15px;
     display: none;
     color: #fff;
+    overflow: scroll;
   }
 
   p {margin:10px;}
@@ -118,7 +130,14 @@ iframe {margin: 50px 50px 0px 50px;
      top: 150px;*/
   iframe {margin: 50px 50px 0px 50px;
           background-color: #000;
+          height: 20%;
+          width: 60%;
           /*display:none;*/
+  }
+
+  #invisible-section {position: fixed;
+                      bottom: 0;
+                      width: screen;
   }
 
   .music {width: 40%;
