--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,18 @@ body{height: 1100px;
   margin-right: 50px;
   margin-left: 50px;
   margin-top:: 10px;
+  margin-bottom: 200px;
   padding: 10px;
   background-color: #000;
   opacity: 0.6;
   border-radius: 15px;
   display: none;
   color: #fff;
+
 }
 
-p {margin:20px;}
+p {margin:20px;
+}
 /*position: absolute;
    left: 100px;
    top: 150px;*/
@@ -53,19 +56,12 @@ iframe {margin: 50px 50px 0px 50px;
 
 #invisible-section {position: fixed;
                     bottom: 0;
-                    width: screen;
+                    width: 100%;
+                    height: 200px;
+                    overflow-y: scroll;
 }
 
-.music {width: 40%;
-    height: 40%;
-    margin-right: 20px;
-    padding: 10px;
-    background-color: #fff;
-    opacity: 0.3;
-    border-radius: 15px;
-    /*display: none;*/
-    color: #000 ;
-}
+
 
 
 
@@ -115,13 +111,14 @@ iframe {margin: 50px 50px 0px 50px;
     width: 100%;
     margin-right: 5px;
     margin-left: 5px;
+    margin-bottom: 200px;
     padding: 10px;
     background-color: #000;
     opacity: 0.6;
     border-radius: 15px;
     display: none;
     color: #fff;
-    overflow: scroll;
+
   }
 
   p {margin:10px;}
