--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body{height: 1100px;
   background-size: cover;
 }
 
+a:link, a:visited {
+  color: white;
+}
+
 #text1 {padding-top: 50px;
     margin-left: 5%;
     color: #fff;
@@ -25,6 +29,8 @@ body{height: 1100px;
           margin-left: 50px;
           margin-right: 50px;
           margin-bottom: 10px;
+          font-family: 'Raleway', sans-serif;
+          font-weight: bold;;
 }
 
 .about {
@@ -61,17 +67,12 @@ iframe {margin: 50px 50px 0px 50px;
                     overflow-y: scroll;
 }
 
-
-
-
-
-#show-text {width: 350px;
-      margin-top: 10px;
-
-}
-
-#fadein-music-player {width: 350px;
-      margin-top: 10px;*/
+.main-button {
+  width: 350px;
+  margin-top: 10px;
+  background-color: transparent;
+  border-color: #fff;
+  border-width: thin;
 }
 
 #hide-music-player {display:none;
@@ -97,14 +98,14 @@ iframe {margin: 50px 50px 0px 50px;
       color: #fff;
       /*font-family: 'Dancing Script', cursive;*/
       font-family: 'Cabin Sketch', cursive;
-      font-size: 100px;
+      font-size: 80px;
   }
   #text2 {padding-top: 5px;
       margin-left: 10%;
       color: #fff;
       /*font-family: 'Dancing Script', cursive;*/
       font-family: 'Cabin Sketch', cursive;
-      font-size: 100px;
+      font-size: 80px;
   }
 
   .about {
@@ -150,11 +151,11 @@ iframe {margin: 50px 50px 0px 50px;
 
 
 
-  #show-text {width: 100%;
+  #about-button {width: 100%;
 
   }
 
-  #fadein-music-player {width: 100%;
+  #music-button {width: 100%;
 
   }
 
